# linear-cli

./: .graphqlrc.yml  Cargo.toml  README.md  build.rs  install.sh  schema.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-01-linear-cli-design.md  2026-01-01-phase1-foundation.md  2026-01-02-phase2-issues.md  2026-01-02-phase3-entities.md  2026-01-02-phase4-crud.md
scripts/: fetch-schema.sh
src/: client.rs  error.rs  generated.rs  main.rs  output.rs
src/commands/: comment.rs  cycle.rs  document.rs  issue.rs  label.rs  mod.rs  project.rs  search.rs  team.rs  update.rs  user.rs  workflow.rs
