[package]
name = "linear-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI for Linear"
license = "MIT"

[[bin]]
name = "linear"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cynic = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tabled = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cynic-codegen = "3"
